Migrate rsvp-spi tests to Junit5
Migrate JUnit4 tests in rsvp-spi to JUnit5.

JIRA: BGPCEP-1096
Change-Id: Ie5b70b5fa7a8e94d3b9e229c3f8ff9531aa2189d
Assisted-by: Claude Sonnet 5 <noreply@anthropic.com>
Signed-off-by: Matej Sramcik <matej.sramcik@pantheon.tech>
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>